Introduced CollectedBoardGame as a replacement for CollectionBoardGame